<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="16sp" >
    </TextView>

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="16sp" >
    </TextView>

    <Button
        android:id="@+id/bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:focusable="false"
        android:onClick="sendOut"

        android:padding="10sp"
        android:text="@string/send_out"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/bankin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"

        android:focusable="false"
        android:onClick="bankIn"
        android:padding="10sp"
        android:text="@string/bank_in"
        app:layout_constraintBottom_toBottomOf="@+id/bt"
        app:layout_constraintEnd_toStartOf="@+id/bt"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/value"
        app:layout_constraintTop_toTopOf="@+id/value"
        app:layout_constraintVertical_bias="0.83" />

</android.support.constraint.ConstraintLayout>

